WRP-2162 - fixed the css making this appear incorrectly WRP-2108 - fixed alignment issue on X (see screenshot) WRP-1851 - fixed the css that was causing this title text to double line in classification view. WRP-2109 - fixed css causing the task details in the dark theme to be too dark to read

--- a/app/styles/classification.scss
+++ b/app/styles/classification.scss
@@ -66,3 +66,5 @@
     width: 27%;
     padding-left: .25%;
 }
+
+.classification-report .title-text{max-width:100%}
